# router/system/sys_menu.go
@@ -15,5 +15,6 @@ func (m *MenuRouter) InitMenuRouter(Router *gin.RouterGroup) {
 		menuRouter.POST("createMenu", menuApi.CreateMenu)   // 添加菜单
 		menuRouter.DELETE("deleteMenu", menuApi.DeleteMenu) // 删除菜单
 		menuRouter.POST("getMenuList", menuApi.GetMenuList) // 分页获取菜单
+		menuRouter.PUT("updateMenu", menuApi.UpdateMenu)    // 修改菜单
 	}
 }
